crates/plotnik-lib/tests/02-parser/recovery_validation/capture_space_after_dot_breaks_chain.txt
(identifier) @foo. bar
==== diagnostics ====
error: node types must be parenthesized
 --> query.ptk:1:20
  |
1 | (identifier) @foo. bar
  |                    ^^^
  |
help: wrap in parentheses
  |
1 - (identifier) @foo. bar
1 + (identifier) @foo. (bar)
  |
